<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#111827"
    android:orientation="vertical">

    <ImageView
        android:layout_gravity="top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/banner"
        android:cropToPadding="true"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/bannerpng" />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:gravity="center_vertical|center_horizontal"
       android:orientation="vertical">
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/create_new_account"
           android:fontFamily="@font/firacode_bold"
           android:textSize="24sp"
           android:textColor="#fff"
           android:textAlignment="center"
           android:paddingVertical="30dp"
           />

       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@drawable/input"
           android:layout_marginHorizontal="30dp"
           android:paddingVertical="15dp"
           android:paddingHorizontal="30dp"
           android:hint="@string/username"
           android:textColorHint="#E2E8F0"
           android:textSize="16sp"
           android:fontFamily="@font/firacode_regular"
           android:autofillHints=""
           android:inputType="text" />

       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@drawable/input"
           android:layout_marginHorizontal="30dp"
           android:paddingVertical="15dp"
           android:paddingHorizontal="30dp"
           android:hint="@string/email"
           android:textColorHint="#E2E8F0"
           android:textSize="16sp"
           android:fontFamily="@font/firacode_regular"
           android:layout_marginTop="15dp"
           android:inputType="text"
           android:autofillHints="" />

       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@drawable/input"
           android:layout_marginHorizontal="30dp"
           android:paddingVertical="15dp"
           android:paddingHorizontal="30dp"
           android:hint="@string/password"
           android:textColorHint="#E2E8F0"
           android:textSize="16sp"
           android:fontFamily="@font/firacode_regular"
           android:layout_marginTop="15dp"
           android:inputType="text"
           android:autofillHints="" />

       <Button
           style="@style/Widget.AppCompat.Button"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginHorizontal="60dp"
           android:layout_marginTop="60dp"
           android:background="@drawable/primary_btn"
           android:text="@string/sign_up" />
       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/sign_in"
           android:textColor="#2F55A8"
           android:layout_marginHorizontal="60dp"
           android:layout_marginTop="10dp"
           android:background="@drawable/secondary_btn"
           />
   </LinearLayout>

</LinearLayout>
