<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:orientation="vertical"
    android:paddingVertical="10dp">

    <ImageView
        android:id="@+id/go_back_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginHorizontal="20dp"
        android:src="@drawable/ic_left_arrow" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:paddingHorizontal="20dp"
        android:text="@string/watch"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/have_a_youtube_url"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/paste_it_here_to_watch_together"
                android:textColor="@color/light_gray_3"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/youtube_video_url_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_wtih_bg"
                android:hint="@string/youtube_url"
                android:paddingHorizontal="28dp"
                android:paddingVertical="16dp"
                android:textColor="@color/light_white"
                android:textColorHint="@color/light_gray_2"
                android:textSize="14sp" />

            <Button
                android:id="@+id/open_youtube_video_url_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/light_gray_button_bg"
                android:text="@string/open"
                android:textColor="@color/light_white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="@color/light_gray_bg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:paddingHorizontal="10dp"
                android:text="@string/or"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="@color/light_gray_bg" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/want_to_find_a_video"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/use_our_search_feature_to_explore_and_select_a_video_to_watch_together"
                android:textColor="@color/light_gray_3"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/youtube_search_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_wtih_bg"
                android:hint="@string/type_a_word_to_search"
                android:paddingHorizontal="28dp"
                android:paddingVertical="16dp"
                android:textColor="@color/light_white"
                android:textColorHint="@color/light_gray_2"
                android:textSize="14sp" />

            <Button
                android:id="@+id/youtube_search_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/light_gray_button_bg"
                android:text="@string/search"
                android:textColor="@color/light_white" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>