<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#111827"
    android:orientation="vertical">

    <ImageView
        android:layout_gravity="top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/banner"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/bannerpng" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/firacode_bold"
            android:paddingVertical="30dp"
            android:text="@string/welcom_back"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:autofillHints=""
            android:background="@drawable/input"
            android:fontFamily="@font/firacode_regular"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingHorizontal="30dp"
            android:paddingVertical="15dp"
            android:textColorHint="#E2E8F0"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:background="@drawable/input"
            android:fontFamily="@font/firacode_regular"
            android:hint="@string/password"
            android:inputType="text"
            android:paddingHorizontal="30dp"
            android:paddingVertical="15dp"
            android:textColorHint="#E2E8F0"
            android:textSize="16sp" />

        <Button
            android:id="@+id/sign_in"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/primary_btn"
            android:text="@string/sign_in" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/secondary_btn"
            android:text="@string/sign_up"
            android:textColor="#2F55A8" />
    </LinearLayout>

</LinearLayout>
