<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:orientation="vertical">

    <include
        android:id="@+id/loading_screen"
        layout="@layout/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="40dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="124dp"
            android:layout_gravity="top"
            android:adjustViewBounds="true"
            android:contentDescription="@string/banner"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/container"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingHorizontal="40dp"
            android:text="@string/welcom_back"
            android:textColor="@color/light_white"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingHorizontal="40dp"
            android:text="@string/welcom_back_paragraph"
            android:textColor="@color/second_light_white"
            android:textSize="14sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="40dp"
                android:paddingVertical="40dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/username_label"
                    android:textColor="@color/light_white"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/username_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@drawable/input"
                    android:hint="@string/enter_your_username"
                    android:inputType="text"
                    android:paddingHorizontal="32dp"
                    android:paddingVertical="16dp"
                    android:textColorHint="@color/placeholder_light_white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/password_label"
                    android:textColor="@color/light_white"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@drawable/input"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:paddingHorizontal="32dp"
                    android:paddingVertical="16dp"
                    android:textColorHint="@color/placeholder_light_white"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/sign_in_button"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="60dp"
                    android:background="@drawable/primary_btn"
                    android:text="@string/sign_in"
                    android:textColor="@color/light_white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/do_not_have_an_account"
                        android:textColor="@color/second_light_white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/go_to_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/sign_up"
                        android:textColor="@color/primary_color"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</LinearLayout>
