<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10dp"
    android:backgroundTint="@color/transparent"
    android:clipToOutline="true"
    android:elevation="0dp">

    <LinearLayout
        android:id="@+id/video_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToOutline="true"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <ImageView
                    android:id="@+id/thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/youtube_thumb"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/timestamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#7f000000"
                    android:paddingHorizontal="10dp"
                    android:text="@string/video_duration"
                    android:textColor="@color/light_white"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/video_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="sans-serif-medium"
            android:paddingVertical="10dp"
            android:text="@string/video_title"
            android:textColor="@color/light_white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp">

            <TextView
                android:id="@+id/channel_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/youtube_channel_name"
                android:textColor="@color/light_gray_3"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/views_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/video_views"
                android:textColor="@color/light_gray_3"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/video_posted_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/video_posted_at"
                android:textColor="@color/light_gray_3"
                android:textSize="10sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>